--- a/WireForge.html
+++ b/WireForge.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>WireForge -  Website Builder</title>
+  <script>
+        const TOOL_VERSION = '0.0.1';
+    </script>
 </html>
